manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-app
  namespace: platform-demo
spec:
  type: ClusterIP
  selector:
    app: platform-app
  ports:
    - name: http
      port: 80
      targetPort: http
