manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: platform-app
  namespace: platform-demo
spec:
  podSelector:
    matchLabels:
      app: platform-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: platform-demo
      ports:
        - protocol: TCP
          port: 8080
